# outcome-creator

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: outcome-scorer.md
.claude/skills/: assess-outcome.md  export-rubric.md  jtbd-lookup.md  outcome-create.md  outcome-derive.md  outcome-export-rfe-batch.md  outcome-plan-milestones.md  outcome-pull.md  outcome-push.md  outcome-refine.md  outcome-review.md  outcome-signoff.md  outcome-speedrun.md  outcome-split.md  outcome-submit.md  outcome.create.md  outcome.derive.md  outcome.export-rfe-batch.md  outcome.jtbd-lookup.md  outcome.plan-milestones.md  outcome.pull.md  outcome.refine.md  outcome.review.md  outcome.signoff.md  outcome.speedrun.md  outcome.split.md  outcome.submit.md
.github/workflows/: tests.yml
config/: jtbd-registry.yaml  pipeline-settings.yaml  rubric.yaml
config/product-overlays/: rhai.yaml
docs/: follow-ups.md  human-review-guide.md  outcome-framework.md  outcome-milestone-planning.md  outcome-rfe-handoff.md  pipeline-architecture.md  product-overlays.md
examples/: batch-with-jtbd.yaml
scripts/: export_rfe_batch.py  fetch_issue.py  frontmatter.py  generate-report.py  jira_utils.py  list-outcomes.py  list-strategic-goals.py  pull_outcome.py  sync_jtbd_registry.sh
templates/: milestone-plan-template.yaml  outcome-template.md  review-template.md
tests/: test_export_rfe_batch.py  test_frontmatter.py
