[project]
name = "outcome-creator"
version = "0.1.0"
description = "Agentic pipeline for creating well-structured outcomes from strategic goals and research"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
